<resources>
    <string name="app_name">Ecommerce_Univalle</string>
    <string name="ajustes">Ajustes</string>
    <string name="info">Info</string>
    <string name="notificacion">Notificacion</string>
    <string name="productos">Productos</string>
    <string name="otros">Otros</string>
    <string name="finanzas">Finanzas</string>
    <string name="usuario">Usuario</string>
    <string name="cristiano_ronaldo">Cristiano Ronaldo</string>
    <string name="en_linea">En Linea</string>
    <string name="cerrar_session">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="menu_principal">Menu Principal</string>

    <string name="start">Start</string>
    <string name="cancel">Cancel</string>

    <string name="facebook_app_id">395762278814133</string>
    <string name="fb_login_protocol_scheme">fb395762278814133</string>
    <!--<string name="facebook_client_token">56789</string>-->


</resources>